--- a/.tekton/test22-push.yaml
+++ b/.tekton/test22-push.yaml
@@ -117,6 +117,20 @@ spec:
       name: JAVA_COMMUNITY_DEPENDENCIES
       value: $(tasks.build-container.results.JAVA_COMMUNITY_DEPENDENCIES)
     tasks:
+      - name: custom-task
+      workspaces:
+      - name: source
+        workspace: workspace
+      taskSpec:
+        workspaces:
+          - name: source
+            description: The workspace to check for the file
+        steps:
+          - name: get-image
+            image: registry.access.redhat.com/ubi9:latest
+            workingDir: "$(workspaces.source.path)"
+            script: |
+              echo -n "custom task executed"
     - name: init
       params:
       - name: image-url
